# opengl_test1

./: CMakeLists.txt
media/models/: ahri_xd3.mtl  makaka.mtl  planet.mtl  rockobj.mtl  spiritBlossomAhri.mtl
media/shaders/: label.frag  label.vert  multiTextureShader.frag  multiTextureShader.vert  multiTextureShaderInstanced.frag  multiTextureShaderInstanced.vert  mvp.frag  mvp.vert
media/shaders/tut/: rockMVP.vert
media/textures/: ahri_skin27_midform_tx_cm.dds  ahri_skin27_tails_tx_cm.dds  ahri_skin27_tx_cm.dds  tail.dds
opengl_test1/: CMakeLists.txt  opengl_test1.cpp  opengl_test1.h
opengl_test1/Rendering/: Batch.cpp  Batch.h  Object.cpp  Object.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
opengl_test1/Test/: MultiTexObj.cpp  MultiTexObj.h  SimpleObj.cpp  SimpleObj.h  orbit.cpp  orbit.h  orbitInstanced.cpp  orbitInstanced.h
opengl_test1/TestObjects/: Label.cpp  Label.h
opengl_test1/Utils/: Utils.cpp  Utils.h
tut_code/: CMakeLists.txt  test_main.cpp  test_main.h
tut_code/Test/: Mesh.h  Model.h  Shader.h
